--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -41,10 +41,8 @@
 				        </a>
 				    </li>
 				    {% endfor %}
-				    <li class="divider"></li>
 				</ul>
 			    <a class="btn btn-block" href="#create-group" data-toggle="modal"><i class="icon-plus"></i> New Group</a>
-				{% if is_admin %}<a href="#invite-people" class="btn btn-block" data-toggle="modal"><i class="icon-user"></i> Invite To Group</a>{% endif %}
 
                 <!-- REMOVE THIS ASAP -->
                 <style>
@@ -60,6 +58,10 @@
                     .remove-user:hover {
                         cursor: pointer;
                     }
+
+                    .btn {
+                        margin-top: .5em;
+                    }
                 </style>
 
                 <ul class="nav nav-list">
@@ -70,16 +72,31 @@
                         {{ member.get_full_name }}
                         {% if is_admin and member != user %}
                         <span class="remove-user">X</span>
-                        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-                        <script>
-                            $(".remove-user").click(function() {
-                                $(this).parent().hide();
-                            });
-                        </script>
                         {% endif %}
                     </li>
                     {% endfor %}
                 </ul>
+
+                {% if is_admin %}
+                <a href="#invite-people" class="btn btn-block" data-toggle="modal"><i class="icon-user"></i> Invite To Group</a>
+                <ul class="nav nav-list">
+                    <li class="divider"></li>
+                    <li class="nav-header">Active Invites</li>
+                    {% if invites %}
+                        {% for invite in invites %}
+                        <li style="font-size: .7em;">{{ invite.recipient_email }} <span class="remove-user">X</span></li>
+                        {% endfor %}
+                    {% else %}
+                    <li>0 invites</li>
+                    {% endif %}
+                </ul>
+                {% endif %}
+                <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+                <script>
+                    $(".remove-user").click(function() {
+                        $(this).parent().hide();
+                    });
+                </script>
 
 				{% endblock nav %}
 			</div>
