Added Font Awesome

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,17 @@
     <head>
         <title>{% block title %}Bulletin{% endblock title %}</title>
         <!-- Bootstrap -->
-        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico">
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
+        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-responsive.no-icons.min.css" rel="stylesheet" />
+        <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
+        <!--[if lt IE 8]>
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet" />
+        <![endif]-->
 
         <!-- Custom CSS -->
-        <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet">
-		<link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-		<link href="{{ STATIC_URL }}css/responsive.css" rel="stylesheet">
+        <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet" />
+		<link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet" />
+		<link href="{{ STATIC_URL }}css/responsive.css" rel="stylesheet" />
 
         <style type="text/css">
         body { background-image: url("{{ STATIC_URL }}images/bedge_grunge.png"); }
