Hotfix for Font Awesome

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <!-- Bootstrap -->
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-responsive.no-icons.min.css" rel="stylesheet" />
-        <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
         <!--[if lt IE 8]>
         <link href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet" />
         <![endif]-->
