--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -85,7 +85,14 @@
                     <li class="nav-header">Active Invites</li>
                     {% if invites %}
                         {% for invite in invites %}
-                        <li style="font-size: .7em;">{{ invite.recipient_email }} <i class="remove-user icon-remove"></i></li>
+                            {% if invite.acceptance == 'P' %}
+                            <li style="font-size: .7em;">{{ invite.recipient_email }} (Pending)
+                            {% elif invite.acceptance == 'A' %}
+                            <li style="font-size: .7em; color: green;">{{ invite.recipient_email }} (Rejected)
+                            {% else %}
+                            <li style="font-size: .7em; color: red;">{{ invite.recipient_email }} (Accepted)
+                            {% endif %}
+                        <i class="remove-user icon-remove"></i></li>
                         {% endfor %}
                     {% else %}
                     <li>0 invites</li>
