--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -4,6 +4,10 @@ body {
     background-color: #f5f5f5;
 }
 
+.btn {
+	margin-top: 0px!important;
+}
+
 .navbar {
 	margin-bottom: 0px;
 }
@@ -18,6 +22,11 @@ body {
 
 .placeholder {
 	color: #999;
+}
+
+.show_comments {
+	text-align: center;
+	display: block;
 }
 
 #jump-top {
