Fixed a bug that hid all comments if total comments on page greater than 7.

--- a/templates/group_post.html
+++ b/templates/group_post.html
@@ -18,19 +18,19 @@
         <ul class="media-list comments">
             <div class='triangle'></div>
             {% if post.comment_set.all %}
-            {% if comment_set.all|length > 7 %}
+            {% if post.comment_set.all|length > 7 %}
                 <a href="#show-comments" class='comment show_comments'>Show all comments</a>
                 <div class='hide hidden_comments'>
                 {% for comment in post.comment_set.all %}
                 {% include "group_comment.html" %}
                 {% if forloop.revcounter0 == 5 %}
                 </div>
-            {% endif %}
+                {% endif %}
              {% endfor %}
             {% else %}
                 {% for comment in post.comment_set.all %}
                 {% include "group_comment.html" %}
-            {% endfor %}
+                {% endfor %}
             {% endif %}
             {% endif %}
 <!--            <div class='discuss'><a href="javascript:void(0)" class="comment-unhide-btn">Comment</a></div>
