--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -25,8 +25,8 @@ body {
 }
 
 .comments {
-	padding-bottom: 3px;
 	background-color: rgb(245, 245, 245);
+	border: 1px solid rgb(227, 227, 227);
 }
 
 .show_comments, .show_posts {
@@ -89,6 +89,7 @@ abbr {
     -webkit-border-radius: 0;
 	padding: 0;
 	margin: 0;
+	padding-bottom: 2px;
 }
 
 #content-container > .hero-unit {
@@ -102,7 +103,7 @@ abbr {
 }
 
 .comment .timeago {
-	margin-right: 3px;
+	margin-right: 2px;
 }
 
 .loading-spinner {
@@ -158,15 +159,15 @@ abbr {
 	font-weight: normal;
 	line-height: 17px;
 }
+
 .comment-avatar {
-	margin-left: 3px;
+	margin-left: 2px;
+	margin-top: 1px;
 }
 
 .post, .comment, .discuss, .comment-form-container  {
 	margin: 0;
 	word-wrap: break-word;
-	border-left: solid 1px rgb(227, 227, 227)!important;
-	border-right: solid 1px rgb(227, 227, 227)!important;
 }
 
 .post {
@@ -177,8 +178,7 @@ abbr {
 	margin-top: 5px;
 	margin-left: 10px;
 	background-color: #f5f5f5;
-	border-top: solid 1px #EEE;
-	border-bottom: solid 1px #EEE;
+	border: solid 1px rgb(227, 227, 227);
 	line-height: 17px;
 }
 
@@ -211,7 +211,7 @@ abbr {
 .triangle {
 	margin: auto;
 	margin-top: -10px;
-	margin-bottom: 3px;
+	margin-bottom: 2px;
 	width: 0px;
 	height: 0px;
 	border-style: solid;
@@ -233,6 +233,10 @@ abbr {
 
 .comment-form-container {
 	border-width: 0;
+}
+
+.comments .comment:nth-child(odd) {
+   background-color: rgb(227, 227, 227);
 }
 
 .comment-box {
