--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -18,13 +18,13 @@
 		{% for post in post_list %}	
 			{% include "group_post.html" %}
 			{% if forloop.counter == 5 %}
-				<a href="#show-posts" class='well show_posts'>Show more posts</a>
+				<a href="#show-posts" class='well show_posts'><i class="icon-comment-alt"></i> Show more posts</a>
 			<div class='hide hidden_posts'>
 			{% endif %}
 			{% if forloop.last %}
 				</div>
 				{% endif %}
-			 {% endfor %}
+			{% endfor %}
 		{% else %}
 		{% for post in post_list %}	
 			{% include "group_post.html" %}
