--- a/templates/group_post.html
+++ b/templates/group_post.html
@@ -40,7 +40,9 @@
             {% endif %}
 <!--            <div class='discuss'><a href="javascript:void(0)" class="comment-unhide-btn">Comment</a></div>
 -->            <div class="comment comment-form-container loading-spinner-container clearfix">
-                <img class="comment-avatar pull-left" src="{{ user.email|gravatar:'20' }}" alt="user's gravatar" />
+                <div class='comment-avatar-container pull-left'>
+                    <img class="comment-avatar pull-left" src="{{ user.email|gravatar:'20' }}" alt="user's gravatar" />
+                </div>
                 <span class="pull-left name">{{ user.first_name }} {{ user.last_name }}:&nbsp</span>
                 <form method="post" class="comment-form">
                     {% csrf_token %}
