Comment form looks a bit better.

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -239,8 +239,8 @@ abbr {
 	font-size: 13px;
 }
 
-.comment-form {
-	margin: 0;
+.comment-form, .comment-form-container .name, .comment-form-container .comment-avatar-container {
+	margin-top: 2px;
 }
 
 .comment-form-container {
