Darkened comment names.

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -155,7 +155,7 @@ abbr {
 .comments .name, .comments em {
 	margin-left: 5px;
 	font-size: 13px;
-	color: #AAA;
+	color: #777;
 	font-weight: normal;
 	line-height: 17px;
 }
