--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,12 @@
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-responsive.no-icons.min.css" rel="stylesheet" />
         <link href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
+{#        <link href="{{ STATIC_URL }}css/font-awesome.css" rel="stylesheet" />#}
         <!--[if lt IE 8]>
         <link href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet" />
+        <![endif]-->
+        <!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- Custom CSS -->
@@ -29,7 +33,7 @@
         <!-- JQuery -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
         <script src="{{ STATIC_URL }}js/jquery.flip.min.js"></script>
         <script src="{{ STATIC_URL }}js/site.js"></script>
 
