--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "starter_base.html" %}
 
-{% block formtype %}
+{% block content %}
 <div class="clearfix">
     <h2 class="form-signin-heading">404: You have reached an unreachable page</h2>
 </div>
-{% endblock formtype %}
+{% endblock content %}
