--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 {% extends "starter_base.html" %}
 
-{% block formtype %}
+{% block content %}
 <div class="clearfix">
     <h2 class="form-signin-heading">500: Your request cannot be completed</h2>
 </div>
-{% endblock formtype %}
+{% endblock content %}
