--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,14 @@
         <!-- Bootstrap -->
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-responsive.no-icons.min.css" rel="stylesheet" />
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
-{#        <link href="{{ STATIC_URL }}css/font-awesome.css" rel="stylesheet" />#}
-        <!--[if lt IE 8]>
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet" />
+        <!--[if lte IE 9]>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
         <![endif]-->
-        <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
+{#        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/2.0/font-awesome.css" rel="stylesheet" />#}
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-72.css" rel="stylesheet" />
+        <!--[if lt IE 8]>
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/2.0/font-awesome-ie7.css" rel="stylesheet" />
         <![endif]-->
 
         <!-- Custom CSS -->
@@ -32,11 +33,11 @@
         {% endblock body %}
         <!-- JQuery -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
         <script src="{{ STATIC_URL }}js/jquery.flip.min.js"></script>
         <script src="{{ STATIC_URL }}js/site.js"></script>
-
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
         <!--[if lt IE 10]>
         <script src="{{ STATIC_URL }}js/jquery.placeholder.min.js"></script>
 
