--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "starter_base.html" %}
 
-{% block formtype %}
+{% block content %}
 <form class="form-signin clearfix" method="post">
     {% csrf_token %}
     <h2 class="form-signin-heading">Please sign in</h2>
@@ -13,4 +13,4 @@
 	<a href="/about" class="about-btn btn btn-large pull-right">About</a>
 	<a href="/register" class="register-btn btn btn-large pull-right spacing-right">Register</a>
 </form>
-{% endblock formtype %}
+{% endblock content %}
