--- a/templates/register.html
+++ b/templates/register.html
@@ -1,15 +1,19 @@
 {% extends "starter_base.html" %}
 
-{% block formtype %}
-<form id="register-form" class="form-signin loading-spinner-container clearfix" method="post">
-	{% csrf_token %}
-	<h2 class="form-signin-heading">Register your account</h2>
-	{{ form }}
-	<input id="register-btn" class="btn btn-large btn-primary pull-left" type="submit" value="Register" />
-	<a href="/" class="back-btn btn btn-large pull-right">Back</a>
-    <div class="loading-spinner hide"></div>
-</form>
-{% endblock formtype %}
+{% block content %}
+<div id="accordion" class="well span6 offset3">
+    <div id="register-form-container">
+        <form id="register-form" action="/register/" class="form-signin loading-spinner-container clearfix" method="post">
+            {% csrf_token %}
+            <h2 class="form-signin-heading">Register your account</h2>
+            {{ form }}
+            <input id="register-btn" class="btn btn-large btn-primary pull-left" type="submit" value="Register" />
+            <a href="/" class="back-btn btn btn-large pull-right">Back</a>
+            <div class="loading-spinner hide"></div>
+        </form>
+    </div>
+</div>
+{% endblock content %}
 
 {% block extrajs %}
 <script src="{{ STATIC_URL }}js/register.js"></script>
