--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -163,6 +163,7 @@ abbr {
 .comment-avatar {
 	margin-left: 2px;
 	margin-top: 1px;
+	margin-bottom: 2px;
 }
 
 .post, .comment, .discuss, .comment-form-container  {
@@ -204,17 +205,11 @@ abbr {
 }
 
 .comment-message {
-	margin-bottom: 5px;
 	margin-left: 5px;
 }
 
 .show_comments {
 	padding-top: 2px;
-}
-
-.comment-avatar-container {
-	width: 20px;
-	height: 20px;
 }
 
 .comment-form input[type='submit'] {
@@ -243,14 +238,35 @@ abbr {
 
 .comment {
 	font-size: 13px;
+	padding-top: 2px;
+	padding-bottom: 3px!important;
+	position: relative;
 }
 
-.comment-form, .comment-form-container .name, .comment-form-container .comment-avatar-container {
+.comment-avatar-container {
+	width: 24px;
+	height: 24px;
+	margin-top: -1px;
+}
+
+.comment-message, .comment .name {
+	padding-top: 4px;
+}
+
+.comment-form, .comment-form-container .name, .comment .timeago{
 	margin-top: 2px;
 }
 
+.comment .timeago {
+	margin-top: 3px;
+	position: absolute;
+	right: 2px;
+	background-color: white;
+	padding: 0 2px;
+}
+
 .comment-form {
-	padding-left: 24px;
+	padding-left: 29px;
 	padding-right: 75px;
 }
 
@@ -258,8 +274,13 @@ abbr {
 	border-width: 0;
 }
 
+.comment-form-container .loading-spinner {
+	height: 75%;
+	width: 75%;
+}
+
 .comments > .comment:nth-child(odd), .show_comments {
-   background-color: rgb(227, 227, 227);
+   background-color: rgb(235, 235, 235);
 }
 
 .comments .comment:first-child {
