--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
         <![endif]-->
 
-{#        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/2.0/font-awesome.css" rel="stylesheet" />#}
-        <link href="https://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-72.css" rel="stylesheet" />
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/2.0/font-awesome.css" rel="stylesheet" />
+{#        <link href="https://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-72.css" rel="stylesheet" />#}
         <!--[if lt IE 8]>
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/2.0/font-awesome-ie7.css" rel="stylesheet" />
         <![endif]-->
